# DSQProcess

./: .gitignore  CHANGELOG.md  CHANGELOG_es.md  Cargo.toml  README.md  README_es.md  build.rs  presets.json
.github/workflows/: build.yml  update-presets.yml
docs/: PRESETS_RELEASE_GUIDE_es.md  PRESETS_UPDATE_SYSTEM_es.md
lang/: en.json  en_child.json  es.json  es_child.json
src/: child.rs  main.rs
src/app/: mod.rs  state.rs  translate.rs  ui.rs
src/app/ui/: about_tab.rs  components.rs  main_tab.rs  mod.rs  preset_dialog.rs  settings_tab.rs
src/child/: main.rs
src/core/: mod.rs  presets.rs  process.rs
src/platform/: discord.rs  mod.rs  update.rs
src/shared/: config.rs  lang.rs  mod.rs  types.rs
src/shared/richpresence/: client.rs  mod.rs
