[package]
name = "dsqprocess"
version = "0.3.0"
edition = "2021"

[dependencies]
open = "5.0"
semver = "1.0"
eframe = "0.27"
sysinfo = "0.30"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

[build-dependencies]
winres = "0.1"

[[bin]]
name = "dsqprocess"
path = "src/main.rs"

[[bin]]
name = "dsqchild"
path = "src/child/main.rs"
