[package]
name = "dsqprocess"
version = "0.4.0"
edition = "2021"

[dependencies]
open = "5.0"
semver = "1.0"
eframe = "0.27"
sysinfo = "0.30"
serde_json = "1.0"
discord-rich-presence = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

[build-dependencies]
winres = "0.1"

[[bin]]
name = "DSQProcess"
path = "src/main.rs"

[[bin]]
name = "DSQChild"
path = "src/child/main.rs"