[package]
name = "dsqprocess"
version = "0.4.5"
edition = "2021"

[dependencies]
open = "5.3.2"
semver = "1.0.27"
eframe = "0.27"
sysinfo = "0.37.0"
serde_json = "1.0.145"
discord-rich-presence = "1.0.0"
serde = { version = "1.0.225", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
regex = "1.10"

[build-dependencies]
winres = "0.1.12"

[[bin]]
name = "DSQProcess"
path = "src/main.rs"

[[bin]]
name = "DSQChild"
path = "src/child/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
